--- a/src/Components/Projects/Projects.scss
+++ b/src/Components/Projects/Projects.scss
@@ -41,7 +41,7 @@
 
 @media (orientation: landscape) {
   .portfolio-box {
-    padding: 0 1em;
+    padding: 0 2em;
 
     .sub-title-project {
       padding: 0;
